// leads__lead_submission/messages.proto
// Generated by django-cfg django_client module
// DO NOT EDIT - This file is auto-generated

syntax = "proto3";

package cfg.v1.lead_submission;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";


message Leadsubmissionrequest {

    enum ContactType {
      CONTACTTYPE_UNKNOWN = 0;
      CONTACTTYPE_EMAIL = 1;
      CONTACTTYPE_WHATSAPP = 2;
      CONTACTTYPE_TELEGRAM = 3;
      CONTACTTYPE_PHONE = 4;
      CONTACTTYPE_OTHER = 5;
    }

  string name = 1;
  string email = 2;
  optional string company = 3;
  optional string company_site = 4;
  optional ContactType contact_type = 5;
  optional string contact_value = 6;
  optional string subject = 7;
  string message_value = 8;
  optional string extra = 9;
  string site_url = 10;
}

message Leadsubmissionresponse {

  bool success = 1;
  string message_value = 2;
  int64 lead_id = 3;
}

message Details {
}

message Leadsubmissionerror {

  message Details {
  }

  bool success = 1;
  string error = 2;
  optional Details details = 3;
}